# p2p_arbitration

./: binance.py  main.py  p2p_data  test.py
build-p2p_arbitration_app-Desktop_arm_darwin_generic_mach_o_64bit-Release/: CMakeCache.txt  Makefile  cmake_install.cmake  p2p_arbitration_app  qtcsettings.cmake
build-p2p_arbitration_app-Desktop_arm_darwin_generic_mach_o_64bit-Release/.cmake/api/v1/reply/: cache-v2-358daaf84debbe00ce80.json  cmakeFiles-v1-20bbafa92a8046a71a61.json  cmakeFiles-v1-3f41cee44fce37110ec2.json  cmakeFiles-v1-c9ce73e1203e388859f1.json  codemodel-v2-966fddee562a8d09cf88.json  codemodel-v2-ae7c3d11e219196e850e.json  codemodel-v2-ef38a327a17089e69d2f.json  directory-.-Release-425c2ef05cb55b56fa29.json  directory-.-Release-5a46b4a7861d35f3455e.json  directory-.-Release-7066820f0b8f5632c21f.json  index-2024-05-29T09-21-26-0476.json  index-2024-05-30T17-50-10-0202.json  index-2024-05-31T07-56-14-0916.json  target-p2p_arbitration_app-Release-068ccaccf09b0d67e1b6.json  target-p2p_arbitration_app-Release-6e9fd2d6e65a765c7fd4.json  target-p2p_arbitration_app-Release-99f8235d08409609ff76.json  target-p2p_arbitration_app_autogen-Release-dd1713d2d6489a84d4ad.json  target-p2p_arbitration_app_autogen_timestamp_deps-Release-91593091da45a2348aec.json  target-p2p_arbitration_app_autogen_timestamp_deps-Release-a74ca2ec82aea7560257.json
build-p2p_arbitration_app-Desktop_arm_darwin_generic_mach_o_64bit-Release/.cmake/api/v1/reply.prev/: cache-v2-6b836deaccf065488924.json  cache-v2-823fa301567be1ff27ed.json  cmakeFiles-v1-5173bb1ba74a47433272.json  cmakeFiles-v1-78ae2b5db11b9274a573.json  codemodel-v2-511061289dd4f56421b4.json  codemodel-v2-e4d462d30d4c5a9e2f81.json  directory-.-Release-f1de9a8600f76b0386a6.json  index-2024-05-29T09-21-18-0892.json  index-2024-05-31T07-55-53-0702.json  target-p2p_arbitration_app-Release-5d0187413cfc792c739d.json  target-p2p_arbitration_app-Release-c87b6771dbbb197f001c.json  target-p2p_arbitration_app_autogen-Release-9a87ca64154e80a48c4b.json  target-p2p_arbitration_app_autogen-Release-e27281f01941ec113b5c.json  target-p2p_arbitration_app_autogen_timestamp_deps-Release-c858bbce5bb369ae1a96.json
build-p2p_arbitration_app-Desktop_arm_darwin_generic_mach_o_64bit-Release/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-p2p_arbitration_app-Desktop_arm_darwin_generic_mach_o_64bit-Release/.qtc_clangd/: compile_commands.json
build-p2p_arbitration_app-Desktop_arm_darwin_generic_mach_o_64bit-Release/.qtc_clangd/.cache/clangd/index/: QApplication.016A63D57841CDE8.idx  QColor.949A001BB24493C4.idx  QColor.A6C7CA9517A682EB.idx  QDialog.BF6525175CDAE2CC.idx  QEnterEvent.C465D49ED7F07383.idx  QEvent.A7C130E3D5357463.idx  QEvent.D6955DD4EA9FD895.idx  QFlags.111D214A7B34C09F.idx  QFlags.C11AD9D64C783EB8.idx  QFrame.0ADFF2FA40EABAAE.idx  QFrame.166E142E6FB8C13A.idx  QIODevice.2DD221A2810D88A2.idx  QIODevice.406FDF74539A8C5E.idx  QIcon.D63238F6B0143D84.idx  QJsonArray.96114E1CF594AE78.idx  QJsonDocument.0A8B9A986970AD88.idx  QJsonObject.37E031578BD6942E.idx  QJsonObject.89480853DDBEB840.idx  QJsonParseError.00BE03E4A407E11A.idx  QJsonParseError.48AACB3B209E126A.idx  QMap.261BB1439E92E43E.idx  QMap.35BC55707B100E71.idx  QMetaType.DCACDF38F194A07D.idx  QMouseEvent.6C1C68CC03FDC862.idx  QMouseEvent.F1396A0D84B28685.idx  QNetworkAccessManager.6581206EBE9BD75E.idx  QNetworkProxy.6CB8065D3533013C.idx  QNetworkProxy.6DEDF1C710A29169.idx  QNetworkReply.349C9D598B8503B6.idx  QNetworkRequest.4913169AF6064B67.idx  QNetworkRequest.DEC0F0D635AF7E1C.idx  QObject.9C8FD0D1A2E2FEC0.idx  QPalette.82D86B6D4DD9D891.idx  QPalette.CCEFEEAAF61A88FF.idx  QRect.8D885F5055383334.idx  QRect.D117E4AD208856EB.idx  QSharedDataPointer.B81A060E32851257.idx  QSharedDataPointer.BD2DF00D9C009624.idx  QSize.39ABE2AE7EA169E5.idx  QSize.8FCCE4F0CAC6DCB7.idx  (+264 more)
build-p2p_arbitration_app-Desktop_arm_darwin_generic_mach_o_64bit-Release/p2p_arbitration_app.app/Contents/: Info.plist
build-p2p_arbitration_app-Desktop_arm_darwin_generic_mach_o_64bit-Release/p2p_arbitration_app.app/Contents/MacOS/: p2p_arbitration_app
build-p2p_arbitration_app-Desktop_arm_darwin_generic_mach_o_64bit-Release/p2p_arbitration_app_autogen/: deps  mocs_compilation.cpp
build-p2p_arbitration_app-Desktop_arm_darwin_generic_mach_o_64bit-Release/p2p_arbitration_app_autogen/EWIEGA46WW/: moc_binance.cpp  moc_binance.cpp.d  moc_buycrypto.cpp  moc_buycrypto.cpp.d  moc_hoverbutton.cpp  moc_hoverbutton.cpp.d  moc_login_dialog.cpp  moc_login_dialog.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_scraper.cpp  moc_scraper.cpp.d  qrc_resources.cpp
build-p2p_arbitration_app-Desktop_arm_darwin_generic_mach_o_64bit-Release/p2p_arbitration_app_autogen/include/: ui_buycrypto.h  ui_login_dialog.h  ui_mainwindow.h
data/: bitcoin.html  bnb.html  ethereum.html  solana.html  tether.html  usd-coin.html
p2p_arbitration_app/: .gitignore  CMakeCache.txt  CMakeLists.txt  binance.cpp  binance.h  buycrypto.cpp  buycrypto.h  buycrypto.ui  cmake_install.cmake  hoverbutton.cpp  hoverbutton.h  login_dialog.cpp  login_dialog.h  login_dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  scraper.cpp  scraper.h  stylehelper.cpp  stylehelper.h
p2p_arbitration_app/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
p2p_arbitration_app/p2p_arbitration_app_autogen/: deps  mocs_compilation.cpp
p2p_arbitration_app/p2p_arbitration_app_autogen/EWIEGA46WW/: moc_binance.cpp.d  moc_mainwindow.cpp.d
p2p_arbitration_cpp/: CMakeLists.txt  binance_cpp.cpp
p2p_arbitration_py/: binance.py
p2p_arbitration_py/data/: bnb.html  solana.html
stpdtest/: info.txt  test.py  ticker.txt
